<?xml version="1.0"?>
<package format="2">
  <name>mrf_launch_structure</name>
  <version>0.0.0</version>
  <description>The mrf_launch_structure package</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>mobile_robot</depend>
  <depend>warehouse</depend>
  <depend>orders_controller</depend>

</package>
